[gd_scene load_steps=19 format=2]

[ext_resource path="res://Assets/ShipInside/ShipOutside.png" type="Texture" id=1]
[ext_resource path="res://Assets/ShipInside/Parts/4.png" type="Texture" id=2]
[ext_resource path="res://Assets/ShipInside/Parts/6.png" type="Texture" id=3]
[ext_resource path="res://Assets/ShipInside/Parts/1.png" type="Texture" id=4]
[ext_resource path="res://Assets/ShipInside/Parts/3.png" type="Texture" id=5]
[ext_resource path="res://Assets/ShipInside/Parts/5.png" type="Texture" id=6]
[ext_resource path="res://Assets/ShipInside/Parts/2.png" type="Texture" id=7]
[ext_resource path="res://Scripts/Ship/Ship.gd" type="Script" id=8]
[ext_resource path="res://Assets/Particles/smoke.png" type="Texture" id=9]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 175, 275 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 175, 0, 175, 275 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 350, 0, 175, 275 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 525, 0, 175, 275 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 700, 0, 175, 275 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 875, 0, 175, 275 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 1050, 0, 175, 275 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": false,
"name": "deploy",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 73.214, 123.41 )

[node name="Ship" type="Node2D"]
script = ExtResource( 8 )

[node name="Whole" type="Node2D" parent="."]
visible = false

[node name="AnimatedSprite" type="AnimatedSprite" parent="Whole"]
frames = SubResource( 8 )
animation = "deploy"

[node name="NotWhole" type="Node2D" parent="."]

[node name="p1" type="Sprite" parent="NotWhole"]
position = Vector2( -58.4802, 37.5118 )
texture = ExtResource( 4 )

[node name="p2" type="Sprite" parent="NotWhole"]
position = Vector2( 57.0374, 37.5201 )
texture = ExtResource( 7 )

[node name="p3" type="Sprite" parent="NotWhole"]
position = Vector2( 1.4748, 109.082 )
texture = ExtResource( 5 )

[node name="p5" type="Sprite" parent="NotWhole"]
position = Vector2( -11.5018, -67.5026 )
texture = ExtResource( 6 )

[node name="p6" type="Sprite" parent="NotWhole"]
position = Vector2( 2.48157, 30.5017 )
texture = ExtResource( 3 )

[node name="p4" type="Sprite" parent="NotWhole"]
position = Vector2( 0, -48.5 )
texture = ExtResource( 2 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( -50.8542, 138.082 )
amount = 4
texture = ExtResource( 9 )
emission_shape = 2
emission_rect_extents = Vector2( 1, 1 )
radial_accel = 57.14

[node name="CPUParticles2D2" type="CPUParticles2D" parent="."]
position = Vector2( 53.9982, 138.082 )
amount = 4
texture = ExtResource( 9 )
emission_shape = 2
emission_rect_extents = Vector2( 1, 1 )
radial_accel = 57.14

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 18.4997 )
shape = SubResource( 9 )
[connection signal="animation_finished" from="Whole/AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
